# gravity

./: .gitattributes  .gitignore  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  CONTRIBUTORS  LICENSE  Makefile  README.md  TODO.md  bootstrap.zig  build.bat  build.zig  build.zig.zon  docker-compose.yaml  gravity.def  gravity.sln  msvcbuild.bat  rm.bat
.github/workflows/: codeql-analysis.yml
api/: Makefile  exec_c.c  exec_gravity.c
api/api.xcodeproj/: project.pbxproj
binding/: README.md
binding/shared/: console.c  console.h  main.gravity
docs/: README.md  To Do.rtf  _coverpage.md  _sidebar.md  api.html  api.md  bool.md  class.md  classes.html  closure.md  closures.html  contrib.md  contributing.html  control-flow.html  controlflow.md  date.html  embedding.md  enum.html  enum.md  env.md  extending.md  fiber.md  fibers.html  file.md  float.md  func.md  functions.html  getting-started.html  index.html  int.md  introspection.md  list.md  lists.html  loop.md  loops.html  map.md  maps.html  math.html  math.md  null.md  (+14 more)
docs/internals/: 1_changelog.html  1_files.html  2_array.html  2_class.html  2_hash.html  2_json.html  2_memory.html  2_overview.html  2_utils.html  2_visitor.html  2_vm.html  3_ast.html  3_bytecode.html  3_codegen.html  3_grammar.html  3_ircode.html  3_lexer.html  3_opcodes.html  3_optimizer.html  3_overview.html  3_parser.html  3_prattparser.html  3_semantic.html  3_symboltable.html  4_base.html  4_gc.html  4_memory.html  4_objmodel.html  4_overview.html  4_performance.html  4_vm.html  5_jit.html  5_overview.html  index.html
docs/stylesheets/: styles.css
examples/: Executing Gravity from C.md  example.c
examples/http/: main.gravity  main.json  run.sh
gravity/: gravity.vcxproj  gravity.vcxproj.filters  unistd.h
gravity.xcodeproj/: project.pbxproj
gravity.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
gravity_visualstudio/: dll.c  exports.def  gravity.sln  gravity.vcxproj  gravity.vcxproj.filters  gravity_cli.vcxproj  gravity_cli.vcxproj.filters  gravity_dll.vcxproj  gravity_dll.vcxproj.filters  unistd.h
projects/: README.md
src/: CMakeLists.txt  Recipe.sml
src/cli/: CMakeLists.txt  gravity.c  unittest.c
src/compiler/: debug_macros.h  gravity_ast.c  gravity_ast.h  gravity_codegen.c  gravity_codegen.h  gravity_compiler.c  gravity_compiler.h  gravity_ircode.c  gravity_ircode.h  gravity_lexer.c  gravity_lexer.h  gravity_optimizer.c  gravity_optimizer.h  gravity_parser.c  gravity_parser.h  gravity_semacheck1.c  gravity_semacheck1.h  gravity_semacheck2.c  gravity_semacheck2.h  gravity_symboltable.c  gravity_symboltable.h  gravity_token.c  gravity_token.h  gravity_visitor.c  gravity_visitor.h
src/optional/: README.md  date_class.c  date_class.h
src/optionals/: gravity_env.c  gravity_env.h  gravity_http.c  gravity_http.h  gravity_json.c  gravity_json.h  gravity_math.c  gravity_math.h  gravity_opt_env.c  gravity_opt_env.h  gravity_opt_file.c  gravity_opt_file.h  gravity_opt_json.c  gravity_opt_json.h  gravity_opt_math.c  gravity_opt_math.h  gravity_optionals.h
src/runtime/: gravity_core.c  gravity_core.h  gravity_vm.c  gravity_vm.h  gravity_vmmacros.h
src/shared/: gravity_array.h  gravity_common.h  gravity_config.h  gravity_delegate.h  gravity_hash.c  gravity_hash.h  gravity_macros.h  gravity_memory.c  gravity_memory.h  gravity_opcodes.h  gravity_value.c  gravity_value.h
src/utils/: gravity_debug.c  gravity_debug.h  gravity_json.c  gravity_json.h  gravity_utils.c  gravity_utils.h
test/: arguments_1.gravity  arguments_2.gravity  base_exec.gravity  bitwise_on_bool.gravity  chained_call.gravity  chained_call2.gravity  chained_call3.gravity  class_static_nonstatic.gravity  closure.gravity  closure3.gravity  closure_apply.gravity  closure_apply_dynamic_args.gravity  closure_args_apply.gravity  codegen_error.gravity  core_bind.gravity  count_args.gravity  division_by_0.gravity  duplicate_file.gravity  enum_static.gravity  fiber.gravity  fiber_abort.gravity  forbidden_exec.gravity  fragile_class.gravity  include_test.gravity  int_bit.gravity  ivar_load_store.gravity  list_contains.gravity  list_count.gravity  list_example.gravity  map_iterate.gravity  map_iterator.gravity  nested_class2.gravity  nested_class3.gravity  outer.gravity  outer_class_right_self.gravity  outer_setter.gravity  outer_setter_map.gravity  random_int.gravity  random_int_error_args_not_ints.gravity  random_int_error_no_args.gravity  (+18 more)
test/01-syntax/: class_declaration.gravity  empty_enum.gravity  empty_return.gravity  var_in_switch.gravity  var_in_while.gravity
test/02-semantic_step1/: class1_redeclared.gravity  class2_internal_redeclared.gravity  function_redeclared.gravity  var_redeclared.gravity
test/03-semantic_step2/: enum2_access_specifier.gravity  func_container.gravity  module_access_specifier.gravity  module_container.gravity  var1_access_specifier.gravity  var_container.gravity
test/04-codegen/: assignment1.gravity   assignment2.gravity  complex_expression.gravity  fibonacci.gravity  literals.gravity  multiple_call.gravity  var_default.gravity
test/classes/: add_operation_and_function_calls.gravity  base_object_methods.gravity  classes_1.gravity  test_declarations.gravity
test/conversion/: conversion_int.gravity  conversion_string.gravity
test/disabled/: README.txt  heap.gravity  loop1.gravity
test/fuzzy/: crash.gravity  heap.gravity  issue144.gravity  issue145.gravity  issue147.gravity  issue149.gravity  max_stack_depth.gravity  operator_string_sub.gravity  testcase.gravity
test/infiniteloop/: loop1.gravity  loop2.gravity  loop3.gravity  loop4.gravity  loop5.gravity
test/loops/: test_for.gravity  test_while.gravity  while_with_break.gravity  while_with_continue.gravity
test/string/: count_method.gravity  index_method.gravity  index_method_error.gravity  index_method_notfound.gravity  loadat.gravity  loadat_error.gravity  lower_method.gravity  lower_method_float.gravity  lower_method_out_of_bounds.gravity  split.gravity  split_runtime_error.gravity  storeat_error.gravity  string_and_other_types.gravity  string_repeat_method.gravity  (+7 more)
(+985 files in other folders)
